<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:elevation="6dp"
    android:padding="16dp"
    app:cardUseCompatPadding="true"
    android:layout_height="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">
        >

        <RelativeLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contactNumber"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/contactName"
            android:layout_width="match_parent"
            android:text="@string/contatc_holder_name"
            android:layout_marginLeft="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/contactNumber"
            android:layout_below="@id/contactName"
            android:layout_width="match_parent"
            android:text="@string/contatc_number"
            android:layout_marginLeft="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dateAndTime"
            android:text="@string/date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/contactName"
            android:layout_alignEnd="@+id/contactName" />
        <TextView
            android:id="@+id/status"
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/contactNumber"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</android.support.v7.widget.CardView>