<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.listadecasamento.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/noContacts"
        android:visibility="visible"
        android:text="@string/no_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="223dp" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/contactContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <RelativeLayout
            android:id="@+id/controlList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/selectAll"
        android:layout_width="wrap_content"
        android:text="@string/select_all_text"
        android:buttonTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content" />

            <Button
                android:id="@+id/deleteAll"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:text="@string/delete_all_contacts"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:animateLayoutChanges="true"
        android:layout_below="@id/controlList"
        android:id="@+id/contactList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</RelativeLayout>
